--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "react-draggable": "^4.4.5",
     "react-p5-wrapper": "^4.1.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
