--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-p5-wrapper": "^4.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
