--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://something.github.io/pro-so",
+  "homepage" : "https://vumathuat.github.io/pro-so/",
   "name": "pro-so",
   "version": "0.1.0",
   "private": true,
